--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ NODE_ENV="development"
 PORT="3000"
 
 ADMIN_NAME= "Luna"
-ADMIN_PASSWORD=
+ADMIN_PASSWORD="Test123"
 
 BASE_URL="http://localhost:3000"
 
