--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,20 @@
 NODE_ENV=
 DEV_NAME=
 PORT=
+TOKEN_PASSWORD=
 
-ADMIN_NAME=
+ADMIN_NAME= 
 ADMIN_PASSWORD=
 
-BASE_URL=
+URL_BASE=
 
-DB_USERNAME=
-DB_PASSWORD=
+DB_PORT=
 DB_DATABASE=
 DB_HOST=
-DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+
+HOST_USER=
+EMAIL_USER=
+SMTP_PORT=
+EMAIL_PASSWORD=
