--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-validator": "^7.2.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.0"
+    "mysql2": "^3.14.0",
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
