--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "build":"npx tsc",
+    "start": "node dist/index.js",
     "dev": "npx ts-node src/index.ts",
     "test": "vitest"
   },
